{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "3a92dd3b-72de-4eab-8c2c-54b08ee148ef",
            "actions": [
                {
                    "name": "FirstFingerContact",
                    "type": "Button",
                    "id": "f14bd0a7-cbe1-452f-9b45-52080e7838ad",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FirstFingerPosition",
                    "type": "Value",
                    "id": "ae36e2a4-af63-489a-9ea9-c0b53ebd927a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryFingerContact",
                    "type": "Button",
                    "id": "9db51f72-2989-4cad-8a9f-d52fec6dccb5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryFingerPosition",
                    "type": "Value",
                    "id": "8b4ea8b5-d484-45f2-b75f-9c3a1a030c8e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5c54c936-6148-4a56-bc3a-f03a35cd3b59",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstFingerContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71504394-999b-4fef-b28e-283c665862eb",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca457a15-a803-4a99-9f0e-9b736864833a",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFingerContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a255fc0-4f84-4d99-bab4-f5f395ee7205",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}